# MunkresTopology

./: .gitignore  .latexmkrc  Biblography.bib  FORMAT_GUIDE.md  Makefile  PROJECT_LOG.md  README.md  TopologyBook.sty  Topology_by_Munkres.ind.raw  Topology_by_Munkres.ist  Topology_by_Munkres.tex  _audit.js  _scan_ocr.py  build.bat  build.sh  centeredblock.txt  makeindex_fix.bat  日志.txt
index/: .coverage  HACKING.md  README.md  _check_env_format.py  _check_proofs.js  _clean_ex_envs.py  _detail_scan.py  _ex_ch2.py  _fix_a_parent.py  _fix_ch3_14.py  _fix_ch3_9.py  _fix_env_format.py  _fix_ex2.py  _fix_ex2_11.py  _fix_fg.js  _fix_finv3.js  _fix_paras.py  _fix_quotes2.js  _fix_remaining.py  _gathered_to_aligned.js  _remove_idx.py  _scan_all.py  _scan_ch2.py  _trace_theorem.js  _wrap_ch1.js  assign-chapters.js  ch1-editing-notes.md  ch12_entries.json  ch13_entries.json  ch2-14-tasklist.md  check-all.js  check-build.js  check-config.js  compare-pdf.js  coverage.js  crossref-jsons.js  fix-quotes.js  insert-commands.js  l1-manual-review.txt  l2_missing_in_pdf.txt  (+9 more)
index/_archive/: _convert_exercises.js  _fix_ex.py  _fix_ex34.js  _fix_ex8.py  _fix_ex_all.py  _fix_exercises.js  _fix_finv.js  _fix_finv2.js  _fix_last5.py  _fix_quotes3.js  _quick_scan.py
index/chapters_for_test/: NoteToReader.tex  halftitle.tex
index/check/: build.js  config.js
index/config/: default.json  default.yaml
index/core/: audit-skipped.js  check-all.js  insert-commands.js  optimize-l1.js  test.js  verify-assignments.js
index/data/: ch02_entries.json  ch04_entries.json  ch05_entries.json  (+3 more)
(+242 files in other folders)
