[project]
name = "latex-index-tool"
version = "1.0.0"
description = "Production-ready LaTeX index insertion tool — config-driven, project-agnostic"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "tqdm>=4.0",
]
tui = [
    "rich>=13.0",
]
progress = [
    "tqdm>=4.0",
]
xindy = [
    "pypinyin>=0.51",
]
all = [
    "latex-index-tool[tui,progress,xindy,dev]",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=7.0",
]

[project.scripts]
latex-index = "latex_index.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[tool.setuptools.packages.find]
include = ["latex_index*"]
